--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "cors": "^2.8.5",
         "cryptr": "^6.0.3",
         "express": "^4.17.1",
-        "mongodb": "^6.3.0"
+        "mongodb": "^6.3.0",
+        "socket.io": "^4.7.5"
     },
     "devDependencies": {
         "nodemon": "^3.1.0"
